# src/Netnr.P/Netnr.DataKit.NodeJs/public/swagger.json
@@ -53,54 +53,6 @@
             }
           }
         }
-      },
-      "options": {
-        "tags": [
-          "DK"
-        ],
-        "summary": "获取所有表名及注释",
-        "parameters": [
-          {
-            "name": "tdb",
-            "in": "query",
-            "description": "数据库类型（0：MySQL，1：SQLite，2：Oracle，3：SQLServer，4：PostgreSQL）",
-            "schema": {
-              "$ref": "#/components/schemas/TypeDB"
-            }
-          },
-          {
-            "name": "conn",
-            "in": "query",
-            "description": "连接字符串",
-            "schema": {
-              "type": "string",
-              "description": "连接字符串",
-              "nullable": true
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/ActionResultVM"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ActionResultVM"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ActionResultVM"
-                }
-              }
-            }
-          }
-        }
       }
     },
     "/DK/GetColumn": {
@@ -167,142 +119,10 @@
             }
           }
         }
-      },
-      "options": {
-        "tags": [
-          "DK"
-        ],
-        "summary": "获取所有列",
-        "requestBody": {
-          "content": {
-            "multipart/form-data": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "tdb": {
-                    "$ref": "#/components/schemas/TypeDB"
-                  },
-                  "conn": {
-                    "type": "string",
-                    "description": "连接字符串",
-                    "nullable": true
-                  },
-                  "filterTableName": {
-                    "type": "string",
-                    "description": "过滤表名，英文逗号分隔，为空时默认所有表",
-                    "default": "",
-                    "nullable": true
-                  }
-                }
-              },
-              "encoding": {
-                "tdb": {
-                  "style": "form"
-                },
-                "conn": {
-                  "style": "form"
-                },
-                "filterTableName": {
-                  "style": "form"
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/ActionResultVM"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ActionResultVM"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ActionResultVM"
-                }
-              }
-            }
-          }
-        }
       }
     },
     "/DK/SetTableComment": {
       "get": {
-        "tags": [
-          "DK"
-        ],
-        "summary": "设置表注释",
-        "parameters": [
-          {
-            "name": "tdb",
-            "in": "query",
-            "description": "数据库类型（0：MySQL，1：SQLite，2：Oracle，3：SQLServer，4：PostgreSQL）",
-            "schema": {
-              "$ref": "#/components/schemas/TypeDB"
-            }
-          },
-          {
-            "name": "conn",
-            "in": "query",
-            "description": "连接字符串",
-            "schema": {
-              "type": "string",
-              "description": "连接字符串",
-              "nullable": true
-            }
-          },
-          {
-            "name": "TableName",
-            "in": "query",
-            "description": "表名",
-            "schema": {
-              "type": "string",
-              "description": "表名",
-              "nullable": true
-            }
-          },
-          {
-            "name": "TableComment",
-            "in": "query",
-            "description": "表注释",
-            "schema": {
-              "type": "string",
-              "description": "表注释",
-              "nullable": true
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/ActionResultVM"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ActionResultVM"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ActionResultVM"
-                }
-              }
-            }
-          }
-        }
-      },
-      "options": {
         "tags": [
           "DK"
         ],
@@ -449,206 +269,10 @@
             }
           }
         }
-      },
-      "options": {
-        "tags": [
-          "DK"
-        ],
-        "summary": "设置列注释",
-        "parameters": [
-          {
-            "name": "tdb",
-            "in": "query",
-            "description": "数据库类型（0：MySQL，1：SQLite，2：Oracle，3：SQLServer，4：PostgreSQL）",
-            "schema": {
-              "$ref": "#/components/schemas/TypeDB"
-            }
-          },
-          {
-            "name": "conn",
-            "in": "query",
-            "description": "连接字符串",
-            "schema": {
-              "type": "string",
-              "description": "连接字符串",
-              "nullable": true
-            }
-          },
-          {
-            "name": "TableName",
-            "in": "query",
-            "description": "表名",
-            "schema": {
-              "type": "string",
-              "description": "表名",
-              "nullable": true
-            }
-          },
-          {
-            "name": "FieldName",
-            "in": "query",
-            "description": "列名",
-            "schema": {
-              "type": "string",
-              "description": "列名",
-              "nullable": true
-            }
-          },
-          {
-            "name": "FieldComment",
-            "in": "query",
-            "description": "列注释",
-            "schema": {
-              "type": "string",
-              "description": "列注释",
-              "nullable": true
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/ActionResultVM"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ActionResultVM"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ActionResultVM"
-                }
-              }
-            }
-          }
-        }
       }
     },
     "/DK/GetData": {
       "get": {
-        "tags": [
-          "DK"
-        ],
-        "summary": "查询数据",
-        "parameters": [
-          {
-            "name": "tdb",
-            "in": "query",
-            "description": "数据库类型（0：MySQL，1：SQLite，2：Oracle，3：SQLServer，4：PostgreSQL）",
-            "schema": {
-              "$ref": "#/components/schemas/TypeDB"
-            }
-          },
-          {
-            "name": "conn",
-            "in": "query",
-            "description": "连接字符串",
-            "schema": {
-              "type": "string",
-              "description": "连接字符串",
-              "nullable": true
-            }
-          },
-          {
-            "name": "TableName",
-            "in": "query",
-            "description": "表名",
-            "schema": {
-              "type": "string",
-              "description": "表名",
-              "nullable": true
-            }
-          },
-          {
-            "name": "page",
-            "in": "query",
-            "description": "页码",
-            "schema": {
-              "type": "integer",
-              "description": "页码",
-              "format": "int32"
-            }
-          },
-          {
-            "name": "rows",
-            "in": "query",
-            "description": "页量",
-            "schema": {
-              "type": "integer",
-              "description": "页量",
-              "format": "int32"
-            }
-          },
-          {
-            "name": "sort",
-            "in": "query",
-            "description": "排序字段",
-            "schema": {
-              "type": "string",
-              "description": "排序字段",
-              "nullable": true
-            }
-          },
-          {
-            "name": "order",
-            "in": "query",
-            "description": "排序方式",
-            "schema": {
-              "type": "string",
-              "description": "排序方式",
-              "nullable": true
-            }
-          },
-          {
-            "name": "listFieldName",
-            "in": "query",
-            "description": "查询列，默认为 *",
-            "schema": {
-              "type": "string",
-              "description": "查询列，默认为 *",
-              "nullable": true
-            }
-          },
-          {
-            "name": "whereSql",
-            "in": "query",
-            "description": "条件",
-            "schema": {
-              "type": "string",
-              "description": "条件",
-              "nullable": true
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/ActionResultVM"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ActionResultVM"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ActionResultVM"
-                }
-              }
-            }
-          }
-        }
-      },
-      "options": {
         "tags": [
           "DK"
         ],
